--- a/index.html
+++ b/index.html
@@ -19,13 +19,19 @@
     }
   </style>
   <style>
-    
+    .icon{
+      width: 1em;
+      height: 1em;
+    }
   </style>
 </head>
 <body>
   <div id="app">
-    <s-button></s-button>
+    <s-button>这是一个按钮</s-button>
+    <s-button icon="settings">这是一个按钮</s-button>
+    <s-button icon="settings" icon-position="right">这是一个按钮</s-button>
   </div>
   <script src="./src/app.js"></script>
+  <script src="//at.alicdn.com/t/font_722807_tu64288l3r.js"></script>
 </body>
 </html>
