--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
     <s-button icon="settings">这是一个按钮</s-button>
     <s-button icon="settings" icon-position="right">这是一个按钮</s-button>
     <s-button icon="settings" icon-position="up">这是一个按钮</s-button>
+
+    <s-icon name="download"></s-icon>
   </div>
   <script src="./src/app.js"></script>
   <script src="//at.alicdn.com/t/font_722807_tu64288l3r.js"></script>
