--- a/index.html
+++ b/index.html
@@ -27,14 +27,15 @@
 </head>
 <body>
   <div id="app">
-    <s-button>这是一个按钮</s-button>
+    <s-button :loading="loading1" @click="loading1 = !loading1">这是一个按钮</s-button>
     <s-button icon="settings">这是一个按钮</s-button>
     <s-button icon="settings" icon-position="right">这是一个按钮</s-button>
-    <s-button icon="settings" icon-position="up">这是一个按钮</s-button>
+    <s-button icon="settings" icon-position="right" :loading="true">这是一个按钮</s-button>
 
     <s-icon name="download"></s-icon>
+    <s-icon name="loading"></s-icon>
   </div>
   <script src="./src/app.js"></script>
-  <script src="//at.alicdn.com/t/font_722807_tu64288l3r.js"></script>
+  <script src="//at.alicdn.com/t/font_722807_es1wvlr5we4.js"></script>
 </body>
 </html>
