--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <s-button icon="left">上一页</s-button>
       <s-button icon="left" icon-position="right">下一页</s-button>
     </s-button-group>
-
+    <div id="test"></div>
   </div>
   <script src="./src/app.js"></script>
   <script src="//at.alicdn.com/t/font_722807_es1wvlr5we4.js"></script>
